# base_module

./: .gitignore  README.md  pyproject.toml
src/: arguments.py  config.py  logging.py  parser.py  utils.py
src/foundation/: __init__.py  arguments.py  cli_parser.py  config.py
src/foundation/log/: __init__.py  log_setup.py
src/foundation/utils/: __init__.py  configuration.py  filesystem.py  git.py  parsing.py  utils_filesystem.py
test/: test.py
