[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foundation"
version = "0.1.2"
description = "Some Python utils I regularly use."
readme = "README.md"

authors = [
    {name = "Jannek Schaffert", email = "121396590+JONNeKK@users.noreply.github.com"}
]


requires-python = ">=3.8"
dependencies = [
    "colorlog>=6.10.1",
    "dacite==1.9.2"
]

[tool.setuptools.packages.find]
where = ["src"]